# InternetRadio

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SPEC.md  eslint.config.js  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
cli/: package.json
cli/src/: App.jsx  index.js
cli/src/components/: FavoritesView.jsx  HelpOverlay.jsx  NowPlaying.jsx  SearchBar.jsx  StationList.jsx
cli/src/hooks/: useFavorites.js  usePlayer.js  useStations.js
cli/src/lib/: db.js
client/: index.html  package.json  tailwind.config.js  vite.config.js
client/src/: App.test.js  App.vue
client/src/assets/: styles.css
client/src/components/: StationCard.vue
client/src/composables/: useRadioApi.js
foobar1974/: README.md  package-lock.json  package.json  tsconfig.json
foobar1974/src/: App.tsx  styles.css
foobar1974/src-tauri/: Cargo.toml  tauri.conf.json
foobar1974/src-tauri/src/: lib.rs
foobar1974/src-tauri/src/db/: mod.rs
foobar1974/src-tauri/src/mpris/: mod.rs
foobar1974/src-tauri/src/player/: mod.rs
foobar1974/src-tauri/src/replaygain/: mod.rs
foobar1974/src-tauri/src/state/: mod.rs
foobar1974/src/components/: LibraryPane.tsx  NowPlayingBar.tsx  QueuePane.tsx
foobar1974/src/context/: usePlayerStore.ts
foobar1974/src/types/: models.ts
server/: .env.example  package.json
server/src/: app.js  index.js  seedStations.js
server/src/__tests__/: health.test.js
server/src/config/: favoriteStore.js  radioCatalog.js  stationNormalizer.js  stationStore.js
(+6 files in other folders)
